Fixed unwanted spacing

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -264,13 +264,13 @@ html, body {
 }
 
 #project-info {
-    flex: 1;
     background: white;
-    padding: 30px;
+    padding: 30px 30px 0px 30px;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    overflow-y: auto;
+    align-self: flex-start; 
+    width: 100%;
 }
 
 .project-detail-item {
@@ -314,6 +314,7 @@ html, body {
     display: flex;
     gap: 10px;
     margin-top: 25px;
+    margin-bottom: 30px;
 }
 
 .btn-submit {
